Cambios

Launcher (v2.0.0):
- Descargas multiples

Juego (v2.0.0):
- Actualizado